--- a/index.html
+++ b/index.html
@@ -41,5 +41,6 @@
                 </div>
             </div>
         </section>
+        <script src="scripts/landing.js"></script>
     </body>
 </html>
